@@ -10,8 +10,7 @@ import static com.java_devrel.samples.stdlib.stdio.stdio_h.printf;
 public class Printf {
     public static void main(String[] args) {
         try (var memorySession = MemorySession.openConfined()) {
-            var allocator = SegmentAllocator.newNativeArena(memorySession);
-            var cString = allocator.allocateUtf8String("Welcome from the other side!\n");
+            var cString = memorySession.allocateUtf8String("Welcome from the other side!\n");
             printf(cString);
         }
     }
